--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGODB_URI=mongodb://localhost:27017
+MONGODB_URI=mongodb://localhost:27017/spark_interns
+BCRYPTSALT =$2a$04$q04UphAtHevD8/vthzN7ye.O9tmAXj2d6OSIxvOY1whV3OyOokmF6
