--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb://localhost:27017/spark_interns
+MONGODB_URI=mongodb+srv://spark_intern:14o37mniiVtPnu9V@spark-intern.u6obgpa.mongodb.net/?retryWrites=true&w=majority&appName=spark-intern
 BCRYPTSALT =$2a$04$q04UphAtHevD8/vthzN7ye.O9tmAXj2d6OSIxvOY1whV3OyOokmF6
