--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "spark-recipe-project",
   "version": "1.0.0",
   "description": "R\tecipe Management API",
+  "main": "node index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
