--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
-{
+  {
+    
   "name": "spark-recipe-project",
   "version": "1.0.0",
-  "description": "R\tecipe Management API",
-  "main": "node index.js",
+  "description": "Recipe Management API",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
@@ -12,14 +13,10 @@
   ],
   "author": "Peace and Chidubem",
   "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.7.0",
-    "mongoose": "^8.4.3",
     "nodemon": "^3.1.3"
+ 
   }
-}
+
+
